# distiller-update

./: .gitignore  Justfile  LICENSE  README.md  build-deb.sh  pyproject.toml  ruff.toml
config/: config.toml  config.yaml
debian/: changelog  control  copyright  distiller-update-help  distiller-update-script  distiller-update-wrapper  distiller-update.1  distiller-update.dirs  distiller-update.help2man.include  distiller-update.install  distiller-update.lintian-overrides  distiller-update.logrotate  distiller-update.manpages  distiller-update.service  distiller-update.timer  install  postinst  postrm  preinst  prerm  rules
scripts/: migrate-to-testing.sh  platform-detect.sh
src/distiller_update/: __init__.py  __main__.py  apt.py  checker.py  config.py  core.py  daemon.py  led_controller.py  models.py  news.py
src/distiller_update/notifiers/: __init__.py  dbus.py  journal.py  log.py  motd.py  status.py
src/distiller_update/utils/: __init__.py  config.py  formatting.py  logging.py  ui.py
tests/: test_checker.py  test_cli.py  test_models.py
